--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "dieschittigs/contao-content-api-bundle",
-    "description": "Access Contao content via an easy to use API",
+    "description": "Access Contao content via an easy to use JSON-API",
     "type": "contao-bundle",
+    "keywords":["contao","api","bundle","json"],
     "require": {
         "php": "^5.6|^7.0",
         "contao/core-bundle": "^4.4"
