--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "^5.6|^7.0",
         "contao/core-bundle": "^4.4"
     },
-    "license": "MIT License",
+    "license": "MIT",
     "authors": [
         {
             "name": "Tobias Duehr",
