--- a/src/Resources/config/parameters.yml
+++ b/src/Resources/config/parameters.yml
@@ -1,3 +1,7 @@
 parameters:
-    content_api_readers:
-        news: NewsModel
+  content_api_enabled:
+    true
+  content_api_readers:
+    newsreader: NewsModel
+  content_api_headers:
+    'Access-Control-Allow-Origin': '*'
